# AI-Projects-Codex

./: .dockerignore  .env.example  .gitignore  Dockerfile.sync  README.md  pyproject.toml  requirements-api.txt  requirements-worker.txt
context/: AI_CONTEXT.md  IMPLEMENTATION_NOTES.md
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md  AWS_ZOHO_SETUP.md  CODECOMMIT_SETUP.md  CORRELATION_OFFLOAD_BRIEF.md  DATA_REQUIREMENTS.md  DYNAMODB_SYNC.md  GAPS_AND_DECISIONS.md  IP_GEOLOCATION.md  PROJECT_STEPS.md  SOLO_INTEGRATION.md  STORAGE_OPTIONS.md  TEAMS_INTERFACE.md
infra/: aws-system.yml  schema.sql
scripts/: analyze_sales_routing_violations.py  analyze_solo_exports.py  analyze_violation_correlations.py  backfill_geolite2_ip_cache.py  bootstrap_codecommit.sh  build_and_push_sync_image.sh  build_lambda_package.sh  build_solo_summary.py  build_usage_summary.py  check_setup.py  deploy_aws_system.sh  sync_dynamodb_tables.py
src/license_agent/: __init__.py  agent.py  analysis.py  api.py  aws_chat_store.py  aws_cli.py  aws_sync_worker.py  bot_framework.py  chat_store.py  connectors.py  correlation_analysis.py  data_query.py  dynamodb_sync.py  feedback.py  geolocation.py  ingest.py  ip_geolocation_cache.py  lambda_handler.py  models.py  report_artifacts.py  (+6 more)
teams/: README.md  manifest.json
tests/: test_analysis.py  test_bot_framework.py  test_correlation_analysis.py  test_data_query.py  test_dynamodb_sync.py  test_ingest.py  test_ip_geolocation_cache.py  test_report_artifacts.py  test_settings.py  test_solo.py  test_solo_analysis.py  test_teams_service.py  test_usage_summary.py
