[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "license-violation-data-analyzer-agent"
version = "0.1.0"
description = "Agent-assisted license violation data gathering and analysis."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
geo = [
  "geoip2>=4.8",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

