[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "license-violation-data-analyzer-agent"
version = "0.1.0"
description = "Agent-assisted license violation data gathering and analysis."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "mangum>=0.17",
  "boto3>=1.34",
  "PyJWT[crypto]>=2.10",
  "psycopg[binary]>=3.2",
  "maxminddb>=2.6",
]
db = [
  "psycopg[binary]>=3.2",
]
aws = [
  "boto3>=1.34",
  "mangum>=0.17",
]
geo = [
  "maxminddb>=2.6",
]
dev = [
  "pytest>=8.0",
  "boto3>=1.34",
  "maxminddb>=2.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
